src/test/ui/reachable/expr_return.stderr
error: unreachable expression
  --> $DIR/expr_return.rs:20:22
   |
LL |     let x = {return {return {return;}}}; //~ ERROR unreachable
   |                      ^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_return.rs:14:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

